Fix: Actualizar outputDirectory para Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/sistema-de-prestamos",
-  "framework": "angular",
+  "outputDirectory": "dist/sistema-de-prestamos/browser",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/(.*)",
