--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Database configuration and exports (sensitive data)
+database.config.json
+data-export.json
+
